Fix rainbow snaked
Hard code in the board width and height in clearRect in playGame.js so
that the number of pixels its clearing is always the entire canvas.

Also adjust the width for the buttons on the leaderboard to 100% so they
don't spill over to the right side of the screen for mobile and tablets.

--- a/client/src/components/main/leaderboard/leaderboard.css
+++ b/client/src/components/main/leaderboard/leaderboard.css
@@ -63,3 +63,9 @@ button {
   padding: 4px;
   cursor: pointer;
 }
+
+@media only screen and (max-device-width: 1024px) {
+  .buttons {
+    width: 100%;
+  }
+}
